Fix Java version and update all tests for soft delete pattern
Co-authored-by: CarlosDemetrio <13122724+CarlosDemetrio@users.noreply.github.com>